nav bar collapse (mobile) resolved + tab icon added

--- a/style2.css
+++ b/style2.css
@@ -20,6 +20,7 @@
     */
 }
 
+
 .embed-responsive {
 
     /*
@@ -45,7 +46,7 @@
 
 @media screen and (min-width : 320px) {
 
-        #steph #jon #boat{
+        #steph #jon {
             margin-top: 15px;
             margin-bottom: 15px;
         }
@@ -60,15 +61,21 @@
         margin-top: 15px;
         }
         #about {
-            margin-top: 30px;
+            margin-top: 40px;
         }
+        /*
+        #boat {
+            margin-top: 50px;
+            margin-bottom: 20px;
+        }
+        */
 }
 
 @media screen and (min-width: 768px) {
             .jumbotron {
         height: 300px;
             }
-        #steph #jon #boat{
+        #steph #jon {
         margin-top: 20px;
             margin-bottom: 25px;
         }
@@ -79,8 +86,14 @@
         margin-top: 25px;
         }
         #about {
-            margin-top: 40px;
+            margin-top: 100px;
         }
+        /*
+        #boat {
+            margin-top: 100px;
+            margin-bottom: 40px;
+        }
+        */
 }
 
 @media screen and (min-width: 992px) {
@@ -88,7 +101,7 @@
         height: 500px;
         }
 
-        #steph #jon #boat{
+        #steph #jon {
         margin-top: 30px;
             margin-bottom: 30px;
         }
@@ -99,8 +112,14 @@
         margin-top: 30px;
         }
         #about {
-            margin-top: 50px;
+            margin-top: 150px;
         }
+        /*
+        #boat {
+            margin-top: 150px;
+            margin-bottom: 50px;
+        }
+        */
 }
 
 
@@ -130,6 +149,9 @@ div.container {
     align-self: center;
 }
 */
+#ahoytext {
+    font-family: "Playfair Display";font-size: 200px;
+}
 
 #find {
     top: 50%;
@@ -268,6 +290,8 @@ acmefont{
             .social .fa-youtube-play:hover { /* round youtube play button icon*/
                 background: #DF192A;
             }
+
+
 
 /* previous styling for intro
 #intro h1 {
